--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
         line-height: 1.5rem;
         color: #001d11;
     }
+    postCode {
+        font-size: 2rem;
+    }
 </style>
 
 <body style="font: 9px monospace;line-height:9px;">
@@ -44,26 +47,38 @@
     <section2>
         <div>
             <pre>
-                <code class="language-json">
+                <code class="language-json" style="font-size: .7rem;">
                     C0INS: {
                             currency: "USD",
                             exchange_rate: 0.1,
                             000: {
-                                owner: "Lilly Yuen",
+                                owner: "Lilly, Yuen",
                                 address: "0x0",
                                 value: 10
                             },
                             001: {
-                                owner: "Susan Heath",
+                                owner: "Susan, Heath",
                                 address: "0x0526e6ce579dc9fb7554eabb277b1eb06c93fe7d",
                             },
-                            001: {
-                                owner: "Gordon Miles",
+                            002: {
+                                owner: "Gordon, Miles",
                                 address: "0x1",
+                                value: 10
                             },
-                            001: {
+                            003: {
+                                owner: "Siu Fai, Yuen",
+                                address: "0x1",
+                                value: 10
+                            },
+                            003: {
+                                owner: "Sharon, Yuen",
+                                address: "0x1",
+                                value: 10
+                            },
+                            003: {
                                 owner: "Alpha W0lf",
                                 address: "0x1",
+                                value: 10
                             }
                     }
                 </code>
