--- a/index.html
+++ b/index.html
@@ -63,17 +63,32 @@
                             },
                             003: {
                                 owner: "Siu Fai, Yuen",
-                                address: "0x1",
+                                address: "0x2",
                                 value: 10
                             },
-                            003: {
+                            004: {
                                 owner: "Sharon, Yuen",
-                                address: "0x1",
+                                address: "0x3",
                                 value: 10
                             },
-                            003: {
+                            005: {
+                                owner: "Dan, Cotton",
+                                address: "0x4",
+                                value: 10
+                            },
+                            006: {
+                                owner: "Grant, Bartlett",
+                                address: "0x5",
+                                value: 10
+                            },
+                            007: {
+                                owner: "Aeron, Miles",
+                                address: "0x6",
+                                value: 10
+                            },
+                            008: {
                                 owner: "Alpha W0lf",
-                                address: "0x1",
+                                address: "0x7",
                                 value: 10
                             }
                     }
