--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@ C0INS: {
         001: {
             owner: "Susan, Heath",
             address: "0x0526e6ce579dc9fb7554eabb277b1eb06c93fe7d",
+            value: 10
         },
         002: {
             owner: "Gordon, Miles",
