--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ C0INS: {
         },
         "007": {
             owner: "Aeron, Miles",
-            address: "0x6",
+            address: "0xe1712b2db6a2dc2242d6f78a43f4e157c4608ec9",
             value: 10
         },
         "008": {
