--- a/index.html
+++ b/index.html
@@ -49,47 +49,47 @@ C0INS: {
         exchange_rate: 0.1,
         "000": {
             owner: "Lilly, Yuen",
-            address: "0x0",
+            erc20_address: "0x0",
             value: 10
         },
         "001": {
             owner: "Susan, Heath",
-            address: "0x0526e6ce579dc9fb7554eabb277b1eb06c93fe7d",
+            erc20_address: "0x0526e6ce579dc9fb7554eabb277b1eb06c93fe7d",
             value: 10
         },
         "002": {
             owner: "Gordon, Miles",
-            address: "0x1",
+            erc20_address: "0x1",
             value: 10
         },
         "003": {
             owner: "Siu Fai, Yuen",
-            address: "0x2",
+            erc20_address: "0x2",
             value: 10
         },
         "004": {
             owner: "Sharon, Yuen",
-            address: "0x3",
+            erc20_address: "0x3",
             value: 10
         },
         "005": {
             owner: "Dan, Cotton",
-            address: "0x4",
+            erc20_address: "0x4",
             value: 10
         },
         "006": {
             owner: "Grant, Bartlett",
-            address: "0x5",
+            erc20_address: "0x5",
             value: 10
         },
         "007": {
             owner: "Aeron, Miles",
-            address: "0xe1712b2db6a2dc2242d6f78a43f4e157c4608ec9",
+            erc20_address: "0xe1712b2db6a2dc2242d6f78a43f4e157c4608ec9",
             value: 10
         },
         "008": {
             owner: "Alpha W0lf",
-            address: "0x7",
+            erc20_address: "0x7",
             value: 10
         }
 }
