--- a/index.html
+++ b/index.html
@@ -48,58 +48,60 @@
             <pre>
                 <code class="language-json" style="font-size: 2rem;">
 C0INS: {
-        currency: "USD",
-        exchange_rate: 0.1,
-        "000": {
+    currency: "USD",
+    exchange_rate: 0.1,
+    issued_coins: [
+        {
             owner: "Lilly, Yuen",
             erc20_address: "0x0",
             value: 10
         },
-        "001": {
-            owner: "Karmal, Gent",
-            erc20_address: "0x0",
-            value: 10
-        }
-        "002": {
+        {
             owner: "Susan, Heath",
             erc20_address: "0x0526e6ce579dc9fb7554eabb277b1eb06c93fe7d",
             value: 10
         },
-        "003": {
+        {
             owner: "Gordon, Miles",
             erc20_address: "0x1",
             value: 10
         },
-        "004": {
+        {
+            owner: "Karmal, Gent",
+            erc20_address: "0x0",
+            value: 10
+        }
+        {
             owner: "Siu Fai, Yuen",
             erc20_address: "0x2",
             value: 10
         },
-        "005": {
+        {
             owner: "Sharon, Yuen",
             erc20_address: "0x3",
             value: 10
         },
-        "006": {
+        {
             owner: "Dan, Cotton",
             erc20_address: "0x4",
             value: 10
         },
-        "007": {
+        {
             owner: "Grant, Bartlett",
             erc20_address: "0x5",
             value: 10
         },
-        "008": {
+        {
             owner: "Aeron, Miles",
             erc20_address: "0xe1712b2db6a2dc2242d6f78a43f4e157c4608ec9",
             value: 10
         },
-        "009": {
+        {
             owner: "Alpha W0lf",
             erc20_address: "0x7",
             value: 10
         }
+    ]
 }
                 </code>
             </pre>
