--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;█████,&nbsp;&nbsp;█████,&nbsp;&nbsp;▀██╦&nbsp;&nbsp;█▄&nbsp;&nbsp;██═&nbsp;&nbsp;▐██&nbsp;&nbsp;&nbsp;▀████▓&nbsp;&nbsp;█████╕&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;██▄▄█▓&nbsp;&nbsp;██▄▄█╣&nbsp;&nbsp;&nbsp;█▌⌐&nbsp;&nbsp;└█▌▐█▓&nbsp;&nbsp;╒█▓██&nbsp;&nbsp;&nbsp;&nbsp;█▌U&nbsp;&nbsp;&nbsp;███▄▄&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;█▌▀╙"&nbsp;&nbsp;&nbsp;█▌▀██⌐&nbsp;&nbsp;,██⌐&nbsp;&nbsp;&nbsp;▐██╣&nbsp;&nbsp;&nbsp;█████▌&nbsp;&nbsp;&nbsp;█▌U&nbsp;&nbsp;&nbsp;██▓▄▄&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-▀&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;'▀&nbsp;&nbsp;╙▀&nbsp;&nbsp;╘▀▀╨&nbsp;&nbsp;&nbsp;&nbsp;`▀╛&nbsp;&nbsp;`╚▀&nbsp;&nbsp;`▀&nbsp;&nbsp;&nbsp;-▀`&nbsp;&nbsp;&nbsp;└▀▀▀▀╛&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;▄▄▄▄▄&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;▄▄▄▄▄&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;▄▄▄▄▄&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;▄▄&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;▄▄&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;████▓▀██▄&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;╒███▀▀██▄&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;▀███▓▓&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;¬███▄&nbsp;&nbsp;j██▌&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;▐██▌&nbsp;&nbsp;&nbsp;&nbsp;""&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;██▌,;&nbsp;▐██L&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;██▌⌐&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;¬█████&nbsp;j██▌&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;▐██▌&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;██▌▀█▓▐██▌&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;██▌⌐&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;¬██▌▀██▄██▌&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;"██▌&nbsp;&nbsp;&nbsp;▄▄⌐&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;▐██.&nbsp;&nbsp;██▌Γ&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;██▌⌐&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;¬██▌&nbsp;╙████▌&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;▀█████▓▀&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;▀█████▓▀&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;█████╗&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;¬██▌&nbsp;&nbsp;&nbsp;███▌&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;''&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;`'&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>
         </section1>
         <h2 style="line-height: 1rem; color:#5f5f5f">
-            W0LF coins will be redeemable by burning them into your own erc20 wallet address.
+            W0LF coins will be redeemable by burning them into your own erc20 (e.g. metamask) wallet address.
         </h2>
     </div>
     <section2>
@@ -52,52 +52,72 @@ C0INS: {
     issued_coins: [
         {
             owner: "Lilly, Yuen",
-            erc20_address: "0x0",
+            erc20_address: "",
             value: 10
         },
         {
             owner: "Susan, Heath",
-            erc20_address: "0x0526e6ce579dc9fb7554eabb277b1eb06c93fe7d",
+            erc20_address: "",
             value: 10
         },
         {
             owner: "Gordon, Miles",
-            erc20_address: "0x1",
+            erc20_address: "",
             value: 10
         },
         {
-            owner: "Karmal, Gent",
-            erc20_address: "0x0",
+            owner: "Ernest, Cooper",
+            erc20_address: "",
+            value: 10
+        },
+        {
+            owner: "Mike, Cooper",
+            erc20_address: "",
+            value: 10
+        },
+        {
+            owner: "Lynne, Cooper",
+            erc20_address: "",
             value: 10
         }
         {
             owner: "Siu Fai, Yuen",
-            erc20_address: "0x2",
+            erc20_address: "",
             value: 10
         },
         {
             owner: "Sharon, Yuen",
-            erc20_address: "0x3",
+            erc20_address: "",
+            value: 10
+        },
+        {
+            owner: "Karmal, Gent",
+            erc20_address: "",
+            value: 10
+        }
+        {
+            owner: "Malcolm, West",
+            erc20_address: "",
             value: 10
         },
         {
             owner: "Dan, Cotton",
-            erc20_address: "0x4",
+            erc20_address: "",
             value: 10
         },
         {
             owner: "Grant, Bartlett",
-            erc20_address: "0x5",
+            erc20_address: "",
             value: 10
         },
         {
             owner: "Aeron, Miles",
-            erc20_address: "0xe1712b2db6a2dc2242d6f78a43f4e157c4608ec9",
+            erc20_address: "",
             value: 10
         },
         {
             owner: "Alpha W0lf",
-            erc20_address: "0x7",
+            erc20_address: "",
             value: 10
         }
     ]
