--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
         line-height: 1.5rem;
         color: #001d11;
     }
+    h2 {
+        font-size: 1rem;
+    }
 </style>
 
 <body style="font: 9px monospace;line-height:9px;">
@@ -39,86 +42,89 @@
         <section1>
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;█████,&nbsp;&nbsp;█████,&nbsp;&nbsp;▀██╦&nbsp;&nbsp;█▄&nbsp;&nbsp;██═&nbsp;&nbsp;▐██&nbsp;&nbsp;&nbsp;▀████▓&nbsp;&nbsp;█████╕&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;██▄▄█▓&nbsp;&nbsp;██▄▄█╣&nbsp;&nbsp;&nbsp;█▌⌐&nbsp;&nbsp;└█▌▐█▓&nbsp;&nbsp;╒█▓██&nbsp;&nbsp;&nbsp;&nbsp;█▌U&nbsp;&nbsp;&nbsp;███▄▄&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;█▌▀╙"&nbsp;&nbsp;&nbsp;█▌▀██⌐&nbsp;&nbsp;,██⌐&nbsp;&nbsp;&nbsp;▐██╣&nbsp;&nbsp;&nbsp;█████▌&nbsp;&nbsp;&nbsp;█▌U&nbsp;&nbsp;&nbsp;██▓▄▄&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-▀&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;'▀&nbsp;&nbsp;╙▀&nbsp;&nbsp;╘▀▀╨&nbsp;&nbsp;&nbsp;&nbsp;`▀╛&nbsp;&nbsp;`╚▀&nbsp;&nbsp;`▀&nbsp;&nbsp;&nbsp;-▀`&nbsp;&nbsp;&nbsp;└▀▀▀▀╛&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;▄▄▄▄▄&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;▄▄▄▄▄&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;▄▄▄▄▄&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;▄▄&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;▄▄&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;████▓▀██▄&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;╒███▀▀██▄&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;▀███▓▓&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;¬███▄&nbsp;&nbsp;j██▌&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;▐██▌&nbsp;&nbsp;&nbsp;&nbsp;""&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;██▌,;&nbsp;▐██L&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;██▌⌐&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;¬█████&nbsp;j██▌&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;▐██▌&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;██▌▀█▓▐██▌&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;██▌⌐&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;¬██▌▀██▄██▌&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;"██▌&nbsp;&nbsp;&nbsp;▄▄⌐&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;▐██.&nbsp;&nbsp;██▌Γ&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;██▌⌐&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;¬██▌&nbsp;╙████▌&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;▀█████▓▀&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;▀█████▓▀&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;█████╗&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;¬██▌&nbsp;&nbsp;&nbsp;███▌&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;''&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;`'&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>
         </section1>
-        <h2 style="line-height: 1rem; color:#5f5f5f">
-            W0LF coins will be redeemable by burning them into your own erc20 (e.g. metamask) wallet address.
+        <h2 style="line-height: 1.5rem; color:#5f5f5f;">
+            <p>W0LF coins cannot be bought or traded, they can only be gifted, held and burned.</p>
+            <p>W0LF coins will accrue interest in the future when ALPHA W0LF & W0LF PACK are deployed.</p>
+            <p>W0LF coins will be redeemable by burning them to your ERC20 wallet address, [e.g. metamask]</p>
+            <p>1,000 W0LF coins will be minted, once these have been burned they will be gone forever.</p>
         </h2>
     </div>
     <section2>
         <div>
             <pre>
                 <code class="language-json" style="font-size: 1.5rem;">
-C0INS: {
+W0LF_C0INS: {
     currency: "USD",
     issued_coins: [
         {
             owner: "Lilly, Yuen",
             erc20_address: "",
-            value: 10
+            value_usd: 10
         },
         {
             owner: "Susan, Heath",
             erc20_address: "",
-            value: 10
+            value_usd: 10
         },
         {
             owner: "Gordon, Miles",
             erc20_address: "",
-            value: 10
+            value_usd: 10
         },
         {
             owner: "Ernest, Cooper",
             erc20_address: "",
-            value: 10
+            value_usd: 10
         },
         {
             owner: "Mike, Cooper",
             erc20_address: "",
-            value: 10
+            value_usd: 10
         },
         {
             owner: "Lynne, Cooper",
             erc20_address: "",
-            value: 10
+            value_usd: 10
         }
         {
             owner: "Siu Fai, Yuen",
             erc20_address: "",
-            value: 10
+            value_usd: 10
         },
         {
             owner: "Sharon, Yuen",
             erc20_address: "",
-            value: 10
+            value_usd: 10
         },
         {
             owner: "Karmal, Gent",
             erc20_address: "",
-            value: 10
+            value_usd: 10
         }
         {
             owner: "Malcolm, West",
             erc20_address: "",
-            value: 10
+            value_usd: 10
         },
         {
             owner: "Dan, Cotton",
             erc20_address: "",
-            value: 10
+            value_usd: 10
         },
         {
             owner: "Grant, Bartlett",
             erc20_address: "",
-            value: 10
+            value_usd: 10
         },
         {
             owner: "Aeron, Miles",
             erc20_address: "",
-            value: 10
+            value_usd: 10
         },
         {
             owner: "Alpha W0lf",
             erc20_address: "",
-            value: 10
+            value_usd: 10
         }
     ]
 }
