--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         line-height: 1.5rem;
         color: #001d11;
     }
+
     h2 {
         font-size: 1rem;
     }
@@ -45,17 +46,16 @@
         <h2 style="line-height: 1.5rem; color:#5f5f5f;">
             <p>W0LF coins cannot be bought or traded, they can only be gifted, held and burned.</p>
             <p>W0LF coins will accrue interest in the future when ALPHA W0LF & W0LF PACK are deployed.</p>
+            <p>100 W0LF coins will be minted. 1 coin, 1 owner. No fractional issues.</p>
             <p>W0LF coins will be redeemable by burning them to your ERC20 wallet address, [e.g. metamask]</p>
-            <p>100 W0LF coins will be minted, once these have been burned they will be gone forever.</p>
+            <p> Once these have been burned they will be gone forever. Burn wisely.</p>
         </h2>
     </div>
     <section2>
         <div>
             <pre>
                 <code class="language-json" style="font-size: 1.5rem;">
-W0LF_C0INS: {
-    currency: "USD",
-    issued_coins: [
+W0LF_C0INS: [
         {
             owner: "Lilly, Yuen",
             erc20_address: "",
@@ -77,16 +77,6 @@ W0LF_C0INS: {
             value_usd: 10
         },
         {
-            owner: "Mike, Cooper",
-            erc20_address: "",
-            value_usd: 10
-        },
-        {
-            owner: "Lynne, Cooper",
-            erc20_address: "",
-            value_usd: 10
-        }
-        {
             owner: "Siu Fai, Yuen",
             erc20_address: "",
             value_usd: 10
@@ -97,15 +87,25 @@ W0LF_C0INS: {
             value_usd: 10
         },
         {
-            owner: "Karmal, Gent",
-            erc20_address: "",
-            value_usd: 10
-        }
-        {
             owner: "Malcolm, West",
             erc20_address: "",
             value_usd: 10
         },
+        {
+            owner: "Bristol, Coopers",
+            erc20_address: "",
+            value_usd: 10
+        },
+        {
+            owner: "Hyde Farm, Coopers",
+            erc20_address: "",
+            value_usd: 10
+        }
+        {
+            owner: "Karmal, Gent",
+            erc20_address: "",
+            value_usd: 10
+        }
         {
             owner: "Dan, Cotton",
             erc20_address: "",
@@ -120,15 +120,8 @@ W0LF_C0INS: {
             owner: "Aeron, Miles",
             erc20_address: "",
             value_usd: 10
-        },
-        {
-            owner: "Alpha W0lf",
-            erc20_address: "",
-            value_usd: 10
         }
-    ]
-}
-                </code>
+    ]</code>
             </pre>
         </div>
     </section2>
