--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <h2 style="line-height: 1.5rem; color:#5f5f5f;">
             <p>W0LF coins cannot be bought or traded, they can only be gifted, held and burned.</p>
             <p>W0LF coins will accrue interest in the future when ALPHA W0LF & W0LF PACK are deployed.</p>
-            <p>100 W0LF coins will be minted. 1 coin, 1 owner. No fractional issues.</p>
+            <p>100 W0LF coins will be minted. 1 coin, 1 owner.</p>
             <p>W0LF coins will be redeemable by burning them to your ERC20 wallet address, [e.g. metamask]</p>
             <p> Once these have been burned they will be gone forever. Burn wisely.</p>
         </h2>
