--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <p>W0LF coins will accrue interest in the future when ALPHA W0LF & W0LF PACK are deployed.</p>
             <p>100 W0LF coins will be minted. 1 coin, 1 owner.</p>
             <p>W0LF coins will be redeemable by burning them to your ERC20 wallet address, [e.g. metamask]</p>
-            <p> Once these have been burned they will be gone forever. Burn wisely.</p>
+            <p>Once a coin has been burned, it will be gone forever. Burn wisely.</p>
         </h2>
     </div>
     <section2>
