--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
             <p>100 W0LF coins will be minted. 1 coin, 1 owner.</p>
             <p>W0LF coins will be redeemable by burning them to your ERC20 wallet address, [e.g. metamask]</p>
             <p>Once a coin has been burned, it will be gone forever. Burn wisely.</p>
+            <p>When the last W0LF coin is burned. The story of how W0LF coins became the most valuable, stable backed coin of their generation will be released including all the source code for ALPHA W0LF & ALPHA PACK.</p>
         </h2>
     </div>
     <section2>
